- Villains now respect samsara_jumpmod.
- Villain ammo and weapon pickups now flash the screen like normal pickups.
- The Cyberdemon's rockets have a less static-y launch sound and have twice the rolloff.
- Naraka weapon pickup buffs now persist from level to level.
- Naraka's health pickups now support infinite health.
- Tfear now can only have four Troopers out at one time.

FROM CONCEPT V0 TO V0.1:
=========================
- Admiral Tfear, the villain for the Security Officer, has been added.
- Converted all damage factors to HP. The Cyberdemon has the highest HP of all.
- The Cyberdemon now no longer can be hurt by D'Sparil's Disciples.
- D'Sparil's summon was changed from spawning Disciples from one of D'Sparil's missiles to spawning directly from D'Sparil.
- The Disciples of D'Sparil no longer regard their master as a threat.
- The bulky and large size of the villains means moving in formation isn't quite as easy. Now the villains can pass through each other, like co-op players can.
- D'Sparil no longer randomly resurrects himself again, after he was already resurrected.
- Readjusted and tweaked Chaos Serpent death sequences--hopefully D'Sparil no longer gets stuck after his Chaos Serpent dies.
- The SBarInfo has been updated to accomodate both D'Sparil and on-foot D'Sparil. Picking D'Sparil should no longer get people an HoM.
- The SBarInfo has been updated, and now everyone has a psuedo-proper HUD.
- The Radius of the bosses have been decreased to 16--now they can go through all the tunnels the heroes can, though they may need to crouch for it first.
- The environmental damage resistance of the Villains has been changed from an actor inheriting from PowerIronFeet to a DamageFactor 0 against Slime and Lava.
- D'Sparil's Disciples now only drop Lesser Tomes of Power, though with 4x the drop rate.
- D'Sparil on foot no longer has +NOTARGET, which means enemies should go after him again.