@@ -18,6 +18,18 @@ FROM V0.1 TO V0.11:
 - Naraka weapon pickup buffs now persist from level to level.
 - Naraka's health pickups now support infinite health.
 - Tfear now can only have four Troopers out at one time.
+- Implemented Naraka changelog.
+- With the summon limit in place, Tfear's summon cooldown has been reduced from 30 to 21.
+- D'Sparil's Serpent now moves faster, bites harder and faster, and heals itself slightly on every bite. On dismount, it also pauses momentarily, for people who like to dismount, summon, and remount.
+- D'Sparil on his Serpent should now zorch properly.
+- D'Sparil's zorch effect is no longer green.
+- Cyberdemon should now freeze properly, and his freeze roar should now play properly.
+- D'Sparil's sprites have been converted to .png. Not sure why they weren't already.
+- Weapon pickup messages have been clientsided, so now the server doesn't speak every time someone picks up a weapon.
+- D'Sparil's firing/melee animations should now show properly to spectators.
+- SBARINFO updated to 0.29b's SBARINFO.
+- The Pfhor Troopers now have their own Duke gib sequence and sprites, thanks to President People.
+- A primitive team balancer has been implemented. It checks to see if there are more villains than heroes, or if there's twice as many heroes than villains, and if so forces the joinee to spectate.
 
 FROM CONCEPT V0 TO V0.1:
 =========================
